@@ -6,6 +6,7 @@ File Name: CHANGES
 - Change header file auto-generator output.
 - Clean up TCL installation script and help message.
 - Change a few functions from public to private.
+- Mark TODO's in various C files.
 
 01/30/2017 FASP 1.9.6:
 - Modify fasp.h (affect all FASP projects).
